@@ -2,6 +2,9 @@
 	* Support Mathieu functions via GSL
 	* Added global settings for numbers
 	* Support real scientific notation and improve other notations of axes label
+	* [spreadsheet]:
+		* Allow to freeze the first column
+
 -----2.8.2 -----
 Bug fixes:
 	* [CAS] Fixed the regression introduced after the python2 backend was deprecated in Cantor
@@ -10,6 +13,7 @@ Bug fixes:
 	* BUG 427190 - Fixed resetting parser error count on some platforms (Debian, Manjaro)
 	* BUG 429110 - Support semicolon as function argument separator for locale with comma as decimal separator
 	* BUG 429368 - Fix validation of custom model equation in fit dock
+
 -----2.8.1 -----
 	* [worksheet] allow to change the background color for axis labels (default: transparent)
 	* [worksheet] allow to copy the plot cursor cordinates
